# raycasting-simple

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
src/Utilities/Map/: Map.c  Map.h
src/Utilities/Strings/: StringLib.c  StringLib.h
src/Utilities/Vec2/: Vec2.c  Vec2.h
